--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
 	"version": "0.0.0-alpha.0",
 	"description": "A collection of compiled Sass templates for building UIs fast.",
 	"scripts": {
-		"test": "echo \"No testing is available for this repository.\" && exit 0"
+		"test": "echo \"No testing is available for this repository.\""
 	},
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/kerig-it/web-tmpl.git"
 	},
 	"keywords": [
-		"template",
 		"templates",
 		"sass",
 		"css"
